psql-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
spec:
  containers:
  - name: psql
    image: postgres:16-alpine
    command: ['sleep', 'infinity']
    volumeMounts:
    - name: ssl-cert
      mountPath: /etc/ssl/certs/root.crt
      subPath: root.crt
  volumes:
  - name: ssl-cert
    secret:
      secretName: postgres-ssl-cert   # ← наш новый секрет с сертификатом
  restartPolicy: Never
