django-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-lb
  namespace: edu-edu-karaman-utegenov
  annotations:
    yandex.cloud/load-balancer-type: external
spec:
  type: LoadBalancer
  selector:
    app: django
  ports:
  - port: 80
    targetPort: 8000
