alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-alb-ingress
  namespace: edu-edu-karaman-utegenov
  annotations:
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/subnets: e2lfaq3bc2ccbstre090
    ingress.alb.yc.io/group-name: django-group
spec:
  ingressClassName: yc-alb-ingress
  rules:
  - host: django-karaman.yc-sirius-dev.pelid.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
