django-my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-my
  namespace: edu-edu-karaman-utegenov
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: edu-edu-karaman-utegenov.yc-sirius-dev.pelid.team
    http:
      paths:
      - path: /django
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
  tls:
  - hosts:
    - edu-edu-karaman-utegenov.yc-sirius-dev.pelid.team
    secretName: tls-secret-edu-edu-karaman-utegenov
